# django-jaiminho

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  catalog-info.yaml  manage.py  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
changelogs/unreleased/: minor-improvements.yml  project-description.yml  support-more-versions.yml  update-event-cleaner.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
jaiminho/: admin.py  apps.py  constants.py  func_handler.py  kwargs_handler.py  models.py  publish_strategies.py  relayer.py  send.py  settings.py  signals.py
jaiminho/management/: __init__.py  event_cleaner.py  events_relay.py  relay_events.py
jaiminho/migrations/: 0001_initial.py  0002_event_encoder_event_function_signature_event_options.py  0002_event_options.py  0003_event_encoder.py  0003_remove_event_action_remove_event_encoder_and_more.py  0004_event_function_signature_alter_event_encoder.py  0004_event_stream.py  0005_event_strategy.py  0006_alter_event_id.py  0007_alter_event_id_to_bigint.py  0008_event_function_signing_key_event_kwargs_signing_key_and_more.py  0008_event_signing_key.py
jaiminho/tests/: factories.py  test_admin.py  test_func_handler.py  test_jaiminho.py  test_kwargs_handler.py  test_models.py  test_settings.py  utils.py  (+1 more)
jaiminho_django_project/: asgi.py  send.py  settings.py  urls.py  wsgi.py
jaiminho_django_test_project/: asgi.py  send.py  settings.py  urls.py  wsgi.py
tests/: test_something.py
(+23 files in other folders)
