[bdist_wheel]
universal=1

[tox:tox]
envlist = py37,py38,py39,py310,py311
passenv = TOXENV CI CIRCLECI CIRCLE_*

[testenv]
deps =
    -rrequirements-dev.txt
    -e .
commands = pytest --capture=no --cov=jaiminho --cov-config setup.cfg --cov-report xml --junitxml=build/testreport/report.xml

[coverage:run]
source = jaiminho

[report]
show_missing = true
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError

[xml]
output = build/coverage.xml

[metadata]
description-file = README.md
